fix: align card grid with search bar and allow cards to fill container width

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -40,6 +40,9 @@
   }
 
   .content {
+    box-sizing: border-box;
+    max-width: 1140px;
+    margin: 0 auto;
     padding: 0 32px 32px;
 
     @include screen.small-to-medium {
